impl of HuffManTree build